@@ -1,7 +1,6 @@
 package de.open4me.depot.jfreechart;
 
 import java.sql.Connection;
-import java.sql.DriverManager;
 import java.sql.ResultSet;
 import java.sql.ResultSetMetaData;
 import java.sql.SQLException;
@@ -27,7 +26,7 @@ import de.willuhn.util.ApplicationException;
  *
  */
 public class SQLXYDataset extends AbstractXYDataset
-implements XYDataset, TableXYDataset, RangeInfo {
+implements TableXYDataset, RangeInfo {
 
 	/** The database connection. */
 	private transient Connection connection;
@@ -36,7 +35,7 @@ implements XYDataset, TableXYDataset, RangeInfo {
 	private String[] columnNames = {};
 
 	/** Rows. */
-	private ArrayList rows;
+	private ArrayList<ArrayList<Object>> rows;
 
 	/** The maximum y value of the returned result set */
 	private double maxValue = 0.0;
@@ -50,7 +49,7 @@ implements XYDataset, TableXYDataset, RangeInfo {
 	 * connection.
 	 */
 	private SQLXYDataset() {
-		this.rows = new ArrayList();
+		this.rows = new ArrayList<ArrayList<Object>>();
 	}
 
 	/**
@@ -175,7 +174,7 @@ implements XYDataset, TableXYDataset, RangeInfo {
 			// Might need to add, to free memory from any previous result sets
 			if (this.rows != null) {
 				for (int column = 0; column < this.rows.size(); column++) {
-					ArrayList row = (ArrayList) this.rows.get(column);
+					ArrayList<Object> row = this.rows.get(column);
 					row.clear();
 				}
 				this.rows.clear();
@@ -194,7 +193,7 @@ implements XYDataset, TableXYDataset, RangeInfo {
 			// Get all rows.
 			// rows = new ArrayList();
 			while (resultSet.next()) {
-				ArrayList newRow = new ArrayList();
+				ArrayList<Object> newRow = new ArrayList<Object>();
 				for (int column = 0; column < numberOfColumns; column++) {
 					Object xObject = resultSet.getObject(column + 1);
 					switch (columnTypes[column]) {
@@ -212,7 +211,7 @@ implements XYDataset, TableXYDataset, RangeInfo {
 					case Types.DATE:
 					case Types.TIME:
 					case Types.TIMESTAMP:
-						newRow.add(new Long(((Date) xObject).getTime()));
+						newRow.add(Long.valueOf(((Date) xObject).getTime()));
 						break;
 					case Types.NULL:
 						break;
@@ -225,10 +224,10 @@ implements XYDataset, TableXYDataset, RangeInfo {
 
 			/// a kludge to make everything work when no rows returned
 			if (this.rows.isEmpty()) {
-				ArrayList newRow = new ArrayList();
+				ArrayList<Object> newRow = new ArrayList<Object>();
 				for (int column = 0; column < numberOfColumns; column++) {
 					if (columnTypes[column] != Types.NULL) {
-						newRow.add(new Integer(0));
+						newRow.add(Integer.valueOf(0));
 					}
 				}
 				this.rows.add(newRow);
@@ -243,7 +242,7 @@ implements XYDataset, TableXYDataset, RangeInfo {
 				this.maxValue = Double.NEGATIVE_INFINITY;
 				this.minValue = Double.POSITIVE_INFINITY;
 				for (int rowNum = 0; rowNum < this.rows.size(); ++rowNum) {
-					ArrayList row = (ArrayList) this.rows.get(rowNum);
+					ArrayList<Object> row = this.rows.get(rowNum);
 					for (int column = 1; column < numberOfColumns; column++) {
 						Object testValue = row.get(column);
 						if (testValue != null) {
@@ -297,7 +296,7 @@ implements XYDataset, TableXYDataset, RangeInfo {
 	 */
 	@Override
 	public Number getX(int seriesIndex, int itemIndex) {
-		ArrayList row = (ArrayList) this.rows.get(itemIndex);
+		ArrayList<Object> row = this.rows.get(itemIndex);
 		return (Number) row.get(0);
 	}
 
@@ -313,7 +312,7 @@ implements XYDataset, TableXYDataset, RangeInfo {
 	 */
 	@Override
 	public Number getY(int seriesIndex, int itemIndex) {
-		ArrayList row = (ArrayList) this.rows.get(itemIndex);
+		ArrayList<Object> row = this.rows.get(itemIndex);
 		return (Number) row.get(seriesIndex + 1);
 	}
 
